version/0.5/_sources/api/ansys/speos/core/bsdf/InterpolationEnhancement.rst.txt






:class:`InterpolationEnhancement`
=================================


.. py:class:: ansys.speos.core.bsdf.InterpolationEnhancement(bsdf, bsdf_namespace, index_1 = 1.0, index_2 = 1.0)

   
   Class to facilitate Specular interpolation enhancement.













   .. rubric:: Notes

   **Do not instantiate this class yourself**



   ..
       !! processed by numpydoc !!


.. py:currentmodule:: InterpolationEnhancement

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~set_interpolation_settings`
            - Set interpolation obtained from bsdf Class or that modified by user.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~index1`
            - Refractive index on reflection side.
          * - :py:attr:`~index2`
            - Refractive index on transmission side.
          * - :py:attr:`~get_reflection_interpolation_settings`
            - Return a fixed dictionary for reflection interpolation settings to be set by user.
          * - :py:attr:`~get_transmission_interpolation_settings`
            - Return a fixed dictionary for reflection interpolation settings to be set by user.







Import detail
-------------

.. code-block:: python

    from ansys.speos.core.bsdf import InterpolationEnhancement

Property detail
---------------

.. py:property:: index1
   :type: float


   
   Refractive index on reflection side.
















   ..
       !! processed by numpydoc !!

.. py:property:: index2
   :type: float


   
   Refractive index on transmission side.
















   ..
       !! processed by numpydoc !!

.. py:property:: get_reflection_interpolation_settings
   :type: Union[None, _InterpolationSettings]


   
   Return a fixed dictionary for reflection interpolation settings to be set by user.
















   ..
       !! processed by numpydoc !!

.. py:property:: get_transmission_interpolation_settings
   :type: Union[None, _InterpolationSettings]


   
   Return a fixed dictionary for reflection interpolation settings to be set by user.
















   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: set_interpolation_settings(is_brdf, settings)

   
   Set interpolation obtained from bsdf Class or that modified by user.


   :Parameters:

       **is_brdf: bool**
           true if settings is for brdf, else for btdf

       **settings: InterpolationEnhancement._InterpolationSettings**
           interpolation settings.














   ..
       !! processed by numpydoc !!




